Implement better sizing for box's divs

--- a/styles.css
+++ b/styles.css
@@ -22,20 +22,28 @@
     flex-wrap: wrap;
     font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
-
-.button-container {
-    background-color: aquamarine;
+.body-container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: aquamarine;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    height: 50px;
     padding: 20px;
 }
 .button-container .div-num {
+    padding: 10px;
     display: flex;
-    width: 200px;
-    height: 50px;
+    flex: 1;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 12px;
-    font-weight: 600;
+    font-size: clamp(5px, 1rem, 20px);
+    font-weight: 400;
     background-color: darkcyan;
     justify-content: center;
     align-items: center;
@@ -50,22 +58,28 @@
 
 .div-container {
     display: flex;
-    background-color: aquamarine;
-    justify-content: center;
-    padding-bottom: clamp(5px, 30vh, 300px);
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.div-container .start-box {
-    width: clamp(5px, 90vmin, 640px);
-    height: clamp(5px, 90vmin, 640px);
     background-color: white;
+    align-items: stretch;
+    justify-content: stretch;
+    flex-direction: column;
+    width: clamp(100px, 80vw, 640px);
+    height: clamp(100px, 80vw, 640px);
+    margin-bottom: 200px;
 }
 
+.row-div {
+    display: flex;
+    justify-content: stretch;
+    align-content: stretch;
+    flex: 1;
+    
+}
 .one-div {
+    display: flex;
     transition: 0.2s;
     background-color: white;
+    flex: 1;
+
 }
 
 .footer-container {
