--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: aquamarine;
+    background-color:cornflowerblue;
 }
 
 .button-container {
